Move MC artifact to LCP and use MOD_CLASSES for versions before the FML rework